--- a/templates/base.html
+++ b/templates/base.html
@@ -18,36 +18,54 @@
 
     <header>
         <!--Large screen top navbar-->
-        <nav class="nav-extended  red darken-1 ">
+        <nav class="nav-extended red darken-1 ">
             <div class="nav-wrapper container">
-                <a href="{{ url_for('get_latest') }}" class="brand-logo"><span class="bolder-text-part">Cook</span><span class="lighter-text-part ">Book</span></a>
+                <a href="{{ url_for('get_latest') }}" class="brand-logo"><span class="bolder-text-part">Cook</span><span
+                        class="lighter-text-part ">Book</span></a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_latest') }}">Home</a></li>
                     <li><a href="{{ url_for('get_recipe') }}">Recipes</a></li>
-                    <li><a href="{{ url_for('get_product_list') }}">Product list</a></li>
+                    <li><a href="{{ url_for('get_product_list') }}">Kitchen Tools</a></li>
                     {% if session.user %}
-                        <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">{{session.user.capitalize()}}</a></li>
-                        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
+                    <li><a class="icon-line-height" href="{{ url_for('profile', username=session['user']) }}"><i class="fas fa-user"></i></a>
+                    </li>
+                    <li><a class="icon-line-height" href="{{ url_for('logout') }}"><i class="fas fa-door-open"></i></a></li>
                     {% else %}
-                        <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
                     {% endif %}
                 </ul>
             </div>
         </nav>
         <!--Small Mobile device navbar-->
-        <ul class="sidenav" id="mobile-demo">
-            <h4 class="center-align grey-text text-darken-4">CookBook</h4>
+        <ul class="sidenav opacity-sidenav" id="mobile-demo">
+            <h4 class="center-align grey-text text-darken-4"><span class="bolder-text-part red-text">Cook</span><span
+                    class="lighter-text-part ">Book</span></h4>
+            <li class="show-on-medium-and-down">
+                <form action="{{ url_for('search')}}" method="post">
+                    <div class="row valign-wrapper center-align mobile-search-bar">
+                        <div class="input-field col s9">
+                            <input type="text" name="requests" id="requests" minlength="3" class="validate" required>
+                            <label for="requests">Search</label>
+                        </div>
+                        <div class="col s3">
+                            <button type="submit" class="red darken-1 btn-red btn text-shadow">
+                                <i class="fas fa-search prefix"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </li>
             <li><a href="{{ url_for('get_latest') }}">Home</a></li>
             <li><a href="{{ url_for('get_recipe') }}">Recipes</a></li>
-            <li><a href="{{ url_for('get_product_list') }}">Product list</a></li>
+            <li><a href="{{ url_for('get_product_list') }}">Kitchen Tools</a></li>
             {% if session.user %}
-                <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                <li><a href="{{ url_for('profile', username=session['user']) }}">{{session.user.capitalize()}}</a></li>
-                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">{{session.user.capitalize()}}</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
-                <li><a href="{{ url_for('login') }}">Log In</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             {% endif %}
         </ul>
     </header>
@@ -58,51 +76,73 @@
     <!--Section for the messages-->
     <section>
         {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <h4 class=" light-green lighten-5 center-align">{{message}}</h4>
-                {% endfor %}
-            {% endif%}
+        {% if messages %}
+        {% for message in messages %}
+        <h4 class=" light-green lighten-5 center-align">{{message}}</h4>
+        {% endfor %}
+        {% endif%}
         {% endwith %}
     </section>
     <main class="container">
         {% block content %}
         {% endblock %}
-    </main> 
-    <footer class="page-footer">
-        {% if not session.user %}
-            <div class="footer-copyright deep-orange lighten-4">
-                <div class="container">
-                    <strong>Join Us Now By Creating Your Account</strong>
-                    <button class="right" >Join Us</button>
-                </div>
-            </div>
-        {% endif %}
+    </main>
+    <footer class="red darken-1">
+        <div class="valign-wrapper footer-join">
+            <a href="{{ url_for('register')}}" class="white-text">
+                <i class="fas fa-heart"></i>
+                Join Us Now By Creating Your Account
+            </a>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col l4 s12">
-                    <h5 class="white-text">About Us</h5>
-                    <p class="grey-text text-lighten-4">Content to present the page</p>
+                    <h5 class="white-text center">About Us</h5>
+                    <div class="divider"></div>
+                    <p class="white-text">Explore our collection of delicious recipe ideas including: Easy made recipes,
+                        Vegan and Vegetarian ideas, Soup recipes, Salads and much more...
+                    </p>
+                    {% if not session.user %}
+                    {% endif %}
                 </div>
-                <div class="col l4 s6">
-                    <h5 class="white-text">Need Help?</h5>
-                    <p class="grey-text text-lighten-4">Contact Us on phone or email</p>
+                <div class="col l4 s12 white-text">
+                    <h5 class="center">Need Help?</h5>
+                    <div class="divider"></div>
+                    <p class="grey-text text-lighten-4">Contact Us via phone or email:</p>
+                    <p><i class="fas fa-phone-alt prefix"></i> +555-555555555</p>
+                    <p><i class="fas fa-at prefix"></i> info@cookbook.com</p>
                 </div>
-                <div class="col l4 s6">
-                    <h5 class="white-text">Follow Us</h5>
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                <div class="col l4 s12">
+                    <h5 class="white-text center">Follow Us</h5>
+                    <div class="divider"></div>
+                    <ul class="follow-us-list">
+                        <li>
+                            <a class="white-text" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!"><i class="fab fa-google-plus-g"></i></a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!"><i class="fab fa-pinterest-p"></i></a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!"><i class="fab fa-youtube"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="footer-copyright">
-            <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        <div>
+            <div class="container center white-text">
+                <div class="divider"></div>
+                &#169 
+                <span>
+                    <script>document.write(/\d{4}/.exec(Date())[0])</script>
+                </span> 
+                CookBook, All content used only for learning puorpose.
             </div>
         </div>
     </footer>
