--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,10 @@
         {% block hero_img %}
         {% endblock %}
     </section>
+    <section>
+        {% block title_img %}
+        {% endblock %}
+    </section>
     <!--Section for the messages-->
     <section>
         {% with messages = get_flashed_messages() %}
