--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -110,7 +110,7 @@
                         {{item.price}}&#8364
                     </p>
                 </div>
-                <div class="col s4 right-align">
+                <div class="col">
                     <a href="#" class="btn-small red darken-1 btn-red waves-effect waves-light">
                         Buy
                     </a>
