--- a/templates/item_details.html
+++ b/templates/item_details.html
@@ -1,48 +1,57 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h2 class="header">{{kitchen_tools.product_name}}</h2>
-<nav>
-    <div class="nav-wrapper">
-        <div class="col s12">
-            <a href="{{ url_for('get_latest') }}">HOME -></a>
-            <a href="{{ url_for('get_product_list') }}">KITCHEN GADGETS -></a>
-            <span>{{kitchen_tools.product_name}}</span>
-        </div>
+<div class="row">
+    <div class="col s12">
+        <h4>{{kitchen_tools.product_name}}</h4>
     </div>
-</nav>
-<div class="card horizontal">
-    <div class="row rm-bottom-gap valign-wrapper">
-        <div class="col m9 small-screen">
-            <div class="card-stacked">
-                <div class="card-action">
-                    <div class="image-container small-screen center-align">
-                        <img class="responsive-img" src="{{kitchen_tools.product_image }}"
-                            alt="{{kitchen_tools.product_name}}"><br />
-                    </div>
-                    <p class="left">
-                        <strong>{{kitchen_tools.product_name}}</strong>
+</div>
+<div class="divider"></div>
+<div class="nav-wrapper bcrumbs">
+    <div class="col s12">
+        <a href="{{ url_for('get_latest') }}" class="black-text">HOME</a>
+        <i class="fas fa-caret-right red-text"></i>
+        <a href="{{ url_for('get_product_list') }}" class="black-text">KITCHEN TOOLS</a>
+        <i class="fas fa-caret-right red-text"></i>
+        <span>{{kitchen_tools.product_name | truncate(20)}}</span>
+        <a onclick="history.back();" href="#!" class=" waves-effect waves-light right black-text"> <i class="fas fa-caret-left red-text"></i> GO BACK</a>
+    </div>
+</div>
+<div class="divider"></div>
+
+
+<div class="row rm-bottom-gap">
+    <div class="col s12 m6">
+        <img class="responsive-img recipe_details" src="{{kitchen_tools.product_image }}"
+            alt="{{kitchen_tools.product_name}}"><br />
+    </div>
+    <div class="col s12 m6">
+        <div class="card-content">
+            <p class="recipe-title">{{kitchen_tools.product_name}}</p>
+            <div class="row mb1">
+                <div class="col">
+                    <p class="price-tag">
+                        <i class="fas fa-tag red-text"></i>
+                        {{kitchen_tools.price}}&#8364
                     </p>
                 </div>
-                <div class="card-content short-desc">
-                    {{kitchen_tools.description}}
-                </div>
-                <div class="card-content card-footer">
-                    <i class="far fa-clock"></i>
-                    <strong>{{kitchen_tools.price}}</strong>&emsp;
-                    <i class="fas fa-utensil-spoon"></i>
-                    <strong>{{kitchen_tools.product_category}}</strong>&emsp;
+            </div>
+            <div class="row mb1">
+                <div class="col">
+                    <h5>About this product</h5>
+                    <span>{{kitchen_tools.description}}</span>
                 </div>
             </div>
         </div>
-        <div class="image-container-medium col m3 small-screen center-align">
-            <img class="responsive-img" src="{{kitchen_tools.product_image }}"
-                alt="{{kitchen_tools.product_name}}"><br />
-        </div>
     </div>
 </div>
+
+
 <div class="col s6 right-align">
-    <button onclick="history.back();" class="btn-large waves-effect waves-light">Go Back <i class="fas fa-file right"></i></button>
+    <a href="#" class="btn-large red darken-1 btn-red waves-effect waves-light">
+        <i class="fas fa-shopping-cart"></i>
+        Buy
+    </a>
 </div>
 
 {% endblock %}
